<resources>
    <string name="app_name">EduApplication</string>
    <string name="ok" translatable="false">OK</string>
    <string name="hello">Hello</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="name" translatable="false">Name</string>
    <string name="second_name" translatable="false">Second Name</string>
    <string name="middle_name" translatable="false">Middle Name</string>
    <string name="done" translatable="false">Done</string>
</resources>